@@ -1,3 +1,7 @@
+2006-09-07  Matthias Wimmer  <m@tthias.eu>
+
+    * xdb_sql/xdb_sql.cc: converting xdb_sql.c to C++, using sstream
+
 2006-09-02  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio.c: fixing fd_set vulnerability (closes bug 66)
